--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
               <a class="nav-link active" aria-current="page" href="/boot.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/notelocalstorage/shop.html">shop</a>
+              <a class="nav-link" href="shop.html">shop</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/notelocalstorage/contact.html">contact</a>
+              <a class="nav-link" href="contact.html">contact</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/about.html">about</a>
+              <a class="nav-link" href="about.html">about</a>
             </li>
             
           </ul>
